# capstone

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  main.cc
include/: actor.h  background.h  camera.h  colors.h  enemy.h  game.h  gameobject.h  platforms.h  player.h
resources/: README.md
src/: enemy.cc  events.cc  game.cc  gameobject.cc  platforms.cc  player.cc
test/: main_test.cc
